[gd_scene load_steps=5 format=2]

[ext_resource path="res://TileMap.gd" type="Script" id=1]
[ext_resource path="res://Tiles.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Mapa Fondo.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 277.5, 8 )

[node name="TileMap" type="TileMap"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 0, 2, 2, 0, 31, 1, 0, 32, 3, 0, 33, 3, 0, 65536, 4, 0, 65537, 4, 0, 65538, 2, 0, 65567, 1, 0, 65568, 3, 0, 65569, 3, 0, 131072, 4, 0, 131073, 4, 0, 131074, 2, 0, 131103, 1, 0, 131104, 3, 0, 131105, 3, 0, 196608, 4, 0, 196609, 4, 0, 196610, 2, 0, 196639, 1, 0, 196640, 3, 0, 196641, 3, 0, 262144, 4, 0, 262145, 4, 0, 262146, 2, 0, 262175, 1, 0, 262176, 3, 0, 262177, 3, 0, 327680, 4, 0, 327681, 4, 0, 327682, 2, 0, 327711, 1, 0, 327712, 3, 0, 327713, 3, 0, 393216, 4, 0, 393217, 4, 0, 393218, 2, 0, 393247, 1, 0, 393248, 3, 0, 393249, 3, 0, 458752, 4, 0, 458753, 4, 0, 458754, 2, 0, 458783, 1, 0, 458784, 3, 0, 458785, 3, 0, 524288, 4, 0, 524289, 4, 0, 524290, 2, 0, 524319, 1, 0, 524320, 3, 0, 524321, 3, 0, 589824, 4, 0, 589825, 4, 0, 589826, 2, 0, 589855, 1, 0, 589856, 3, 0, 589857, 3, 0, 655360, 4, 0, 655361, 4, 0, 655362, 2, 0, 655391, 1, 0, 655392, 3, 0, 655393, 3, 0, 720896, 4, 0, 720897, 4, 0, 720898, 2, 0, 720927, 1, 0, 720928, 3, 0, 720929, 3, 0, 786432, 4, 0, 786433, 4, 0, 786434, 2, 0, 786463, 1, 0, 786464, 3, 0, 786465, 3, 0, 851968, 4, 0, 851969, 4, 0, 851970, 2, 0, 851999, 1, 0, 852000, 3, 0, 852001, 3, 0, 917504, 4, 0, 917505, 4, 0, 917506, 2, 0, 917535, 1, 0, 917536, 3, 0, 917537, 3, 0, 983040, 4, 0, 983041, 4, 0, 983042, 2, 0, 983071, 1, 0, 983072, 3, 0, 983073, 3, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 2, 0, 1048607, 1, 0, 1048608, 3, 0, 1048609, 3, 0, 1114112, 4, 0, 1114113, 4, 0, 1114114, 2, 0, 1114143, 1, 0, 1114144, 3, 0, 1114145, 3, 0, 1179648, 4, 0, 1179649, 4, 0, 1179650, 2, 0, 1179679, 1, 0, 1179680, 3, 0, 1179681, 3, 0, 1245184, 4, 0, 1245185, 4, 0, 1245186, 2, 0, 1245215, 1, 0, 1245216, 3, 0, 1245217, 3, 0, 1310720, 4, 0, 1310721, 4, 0, 1310722, 2, 0, 1310751, 1, 0, 1310752, 3, 0, 1310753, 3, 0, 1376256, 4, 0, 1376257, 4, 0, 1376258, 2, 0, 1376287, 1, 0, 1376288, 3, 0, 1376289, 3, 0, 1441792, 4, 0, 1441793, 4, 0, 1441794, 2, 0, 1441823, 1, 0, 1441824, 3, 0, 1441825, 3, 0, 1507328, 4, 0, 1507329, 4, 0, 1507330, 2, 0, 1507359, 1, 0, 1507360, 3, 0, 1507361, 3, 0, 1572864, 4, 0, 1572865, 4, 0, 1572866, 2, 0, 1572895, 1, 0, 1572896, 3, 0, 1572897, 3, 0, 1638400, 4, 0, 1638401, 4, 0, 1638402, 2, 0, 1638431, 1, 0, 1638432, 3, 0, 1638433, 3, 0, 1703936, 4, 0, 1703937, 4, 0, 1703938, 2, 0, 1703967, 1, 0, 1703968, 3, 0, 1703969, 3, 0, 1769472, 4, 0, 1769473, 4, 0, 1769474, 2, 0, 1769503, 1, 0, 1769504, 3, 0, 1769505, 3, 0, 1835008, 4, 0, 1835009, 4, 0, 1835010, 2, 0, 1835039, 1, 0, 1835040, 3, 0, 1835041, 3, 0, 1900544, 4, 0, 1900545, 4, 0, 1900546, 2, 0, 1900575, 1, 0, 1900576, 3, 0, 1900577, 3, 0, 1966080, 4, 0, 1966081, 4, 0, 1966082, 2, 0, 1966111, 1, 0, 1966112, 3, 0, 1966113, 3, 0, 2031616, 4, 0, 2031617, 4, 0, 2031618, 2, 0, 2031647, 1, 0, 2031648, 3, 0, 2031649, 3, 0, 2097152, 4, 0, 2097153, 4, 0, 2097154, 2, 0, 2097183, 1, 0, 2097184, 3, 0, 2097185, 3, 0, 2162688, 4, 0, 2162689, 4, 0, 2162690, 2, 0, 2162719, 1, 0, 2162720, 3, 0, 2162721, 3, 0, 2228224, 4, 0, 2228225, 4, 0, 2228226, 2, 0, 2228255, 1, 0, 2228256, 3, 0, 2228257, 3, 0, 2293760, 4, 0, 2293761, 4, 0, 2293762, 2, 0, 2293791, 1, 0, 2293792, 3, 0, 2293793, 3, 0, 2359296, 4, 0, 2359297, 4, 0, 2359298, 2, 0, 2359327, 1, 0, 2359328, 3, 0, 2359329, 3, 0, 2424832, 4, 0, 2424833, 4, 0, 2424834, 2, 0, 2424863, 1, 0, 2424864, 3, 0, 2424865, 3, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 608.0, -175.0 ],
"_edit_vertical_guides_": [ -2.0, 542.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
visible = false

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 542.0
margin_bottom = 960.0
texture = ExtResource( 3 )
expand = true

[node name="Object_container" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 272, 1086 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Reset" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Reset" to="." method="_on_Reset_timeout"]
